Tue Jun 14 15:11:38 GMT 2011  Olly Betts <olly@survex.com>

	* docs/remote_protocol.rst: Fixed typo which reversed the intended
	  sense.

Tue Jun 14 02:01:42 GMT 2011  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac: Avoid portability warning from automake
	  about GNU make %-style pattern rules.

Tue Jun 14 01:42:01 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: Add unnecessary AC_LANG_SOURCE wrapper to shut up
	  autoconf warning.

Tue Jun 14 01:18:54 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: Reset LIBRARY_VERSION_INFO to 0:0:0 for the
	  development series, since the library name is different (it has a
	  -1.3 suffix).

Mon Jun 13 16:24:20 GMT 2011  Olly Betts <olly@survex.com>

	* api/omenquire.cc,common/multimatch.h,common/omenquireinternal.h,
	  docs/deprecation.rst,include/xapian/enquire.h,matcher/multimatch.cc,
	  net/remoteserver.cc,tests/api_backend.cc: Remove the deprecated
	  old-style match spy approach of using a MatchDecider.

Mon Jun 13 15:47:57 GMT 2011  Olly Betts <olly@survex.com>

	* api/keymaker.cc,docs/deprecation.rst,include/xapian/keymaker.h,
	  tests/Makefile.am,tests/api_sortingold.cc: Remove deprecated Sorter
	  class and MultiValueSorter subclass.
	* tests/Makefile.mk,tests/perftest/Makefile.mk,
	  tests/soaktest/Makefile.mk: Make the generated "*_all.h" depend on
	  the Makefile.am or Makefile.mk which contains the list of files it
	  is generated from so that it gets regenerated when a file is
	  removed from that list.

Mon Jun 13 13:18:29 GMT 2011  Olly Betts <olly@survex.com>

	* common/omenquireinternal.h: Remove a FIXME - caching the Document
	  object in MSetItem isn't a replacement for storing the sort_key
	  now that sort_keys can be computed.

Mon Jun 13 13:07:31 GMT 2011  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h,queryparser/queryparser.cc: Fold the
	  two forms of QueryParser::add_boolean_prefix() into one method